[gd_scene format=3 uid="uid://bw4n48fdwcy3y"]

[ext_resource type="Shader" uid="uid://dsvqa3bpw1r5c" path="res://addons/whitecell/scripts/shaders/error.gdshader" id="1_ilsly"]
[ext_resource type="Script" uid="uid://bij1j4xgx0c8x" path="res://addons/whitecell/scripts/ui/task.gd" id="2_ejr2a"]
[ext_resource type="FontFile" uid="uid://but47y6v5ypuf" path="res://addons/whitecell/sprites/fonts/chakra_petch/chakra_petch_regular.ttf" id="3_orow2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xtnc3"]
shader = ExtResource("1_ilsly")
shader_parameter/rwidth = 3.0
shader_parameter/rheight = 2.0

[node name="task" type="Control" unique_id=2027812334]
material = SubResource("ShaderMaterial_xtnc3")
custom_minimum_size = Vector2(300, 64)
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 64.0
script = ExtResource("2_ejr2a")

[node name="background" type="ColorRect" parent="." unique_id=1517432870]
material = SubResource("ShaderMaterial_xtnc3")
layout_mode = 0
offset_right = 300.0
offset_bottom = 64.0
color = Color(0, 0, 0, 1)

[node name="label_rich" type="RichTextLabel" parent="." unique_id=1319415076]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 232.0
offset_bottom = 56.0
theme_override_fonts/normal_font = ExtResource("3_orow2")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "todo"
vertical_alignment = 1

[node name="label_edit" type="LineEdit" parent="." unique_id=556053994]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 448.0
offset_bottom = 104.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("3_orow2")
theme_override_font_sizes/font_size = 32
flat = true

[node name="complete" type="ColorRect" parent="." unique_id=2046965153]
layout_mode = 0
offset_left = 248.0
offset_top = 8.0
offset_right = 280.0
offset_bottom = 40.0
color = Color(1, 1, 1, 0.3764706)

[node name="button" type="Button" parent="complete" unique_id=99757126]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
flat = true

[node name="icon" type="Label" parent="complete" unique_id=1516702226]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("3_orow2")
theme_override_font_sizes/font_size = 20
text = "✓"
horizontal_alignment = 1
vertical_alignment = 1

[node name="move_up" type="ColorRect" parent="." unique_id=1227448564]
layout_mode = 0
offset_left = 232.0
offset_top = 8.0
offset_right = 248.0
offset_bottom = 32.0
color = Color(1, 1, 1, 0.2509804)

[node name="button" type="Button" parent="move_up" unique_id=1062391644]
layout_mode = 0
offset_right = 16.0
offset_bottom = 24.0
flat = true

[node name="icon" type="Label" parent="move_up" unique_id=488990844]
layout_mode = 0
offset_right = 16.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("3_orow2")
theme_override_font_sizes/font_size = 15
text = "↑"
horizontal_alignment = 1
vertical_alignment = 1

[node name="move_down" type="ColorRect" parent="." unique_id=1076899697]
layout_mode = 0
offset_left = 232.0
offset_top = 32.0
offset_right = 248.0
offset_bottom = 56.0
color = Color(1, 1, 1, 0.2509804)

[node name="button" type="Button" parent="move_down" unique_id=1860110278]
layout_mode = 0
offset_right = 16.0
offset_bottom = 24.0
flat = true

[node name="icon" type="Label" parent="move_down" unique_id=1426549608]
layout_mode = 0
offset_right = 16.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("3_orow2")
theme_override_font_sizes/font_size = 15
text = "↓"
horizontal_alignment = 1
vertical_alignment = 1

[node name="show_subs" type="ColorRect" parent="." unique_id=758625540]
layout_mode = 0
offset_left = 248.0
offset_top = 40.0
offset_right = 280.0
offset_bottom = 56.0
color = Color(1, 1, 1, 0.2509804)

[node name="button" type="Button" parent="show_subs" unique_id=856715923]
layout_mode = 0
offset_right = 32.0
offset_bottom = 16.0
flat = true

[node name="icon" type="Label" parent="show_subs" unique_id=937000464]
layout_mode = 0
offset_right = 32.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("3_orow2")
theme_override_font_sizes/font_size = 10
text = ". . ."
horizontal_alignment = 1
vertical_alignment = 1

[node name="subtasks" type="VBoxContainer" parent="." unique_id=127881465]
visible = false
layout_mode = 0
offset_top = 64.0
offset_right = 300.0
offset_bottom = 256.0
theme_override_constants/separation = 0

[node name="add" type="ColorRect" parent="subtasks" unique_id=1136711526]
material = SubResource("ShaderMaterial_xtnc3")
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="button" type="Button" parent="subtasks/add" unique_id=444110495]
custom_minimum_size = Vector2(0, 24)
layout_mode = 0
offset_right = 300.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 10
text = "+"
flat = true

[connection signal="editing_toggled" from="label_edit" to="." method="switch_display"]
[connection signal="button_down" from="complete/button" to="." method="complete_task"]
[connection signal="button_down" from="move_up/button" to="." method="move_task" binds= [-1]]
[connection signal="button_down" from="move_down/button" to="." method="move_task" binds= [1]]
[connection signal="button_down" from="show_subs/button" to="." method="toggle_subtasks"]
[connection signal="button_down" from="subtasks/add/button" to="." method="new_subtask"]
